--- a/vaia_crm/src/main/resources/application.properties
+++ b/vaia_crm/src/main/resources/application.properties
@@ -1,7 +1,13 @@
+#mybatis
 mybatis.type-aliases-package=com.vaia.entity
 mybatis.mapper-locations=mapper/*.xml
-
+# 数据源配置
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://59.110.225.113:3306/vaia?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&useSSL=true
 spring.datasource.username=vaiaqa
 spring.datasource.password=123456
+#pagehelper分页插件配置
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
