--- a/vaia_crm/src/main/resources/application.properties
+++ b/vaia_crm/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://59.110.225.113:3306/vaia?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&useSSL=true
 spring.datasource.username=vaiaqa
 spring.datasource.password=123456
+
+spring.http.multipart.maxFileSize=100Mb
+spring.http.multipart.maxRequestSize=300Mb
