--- a/vaia_crm/src/main/resources/dev/config.properties
+++ b/vaia_crm/src/main/resources/dev/config.properties
@@ -1,5 +1,11 @@
 ali.endpoint=http://oss-cn-shanghai.aliyuncs.com
-ali.accesskey.id=LTAIJU0mgvKf8Bwl
-ali.accesskey.secret=2JF96wyNgKTLzpZErZrmJId64Qfq8w
-ali.bucketname=test-vaia
+ali.accesskey.id=LTAIFwzWlHqvi9Xi
+ali.accesskey.secret=bZb93Tx2iGH0ngJUPD6MwvL7cFU05r
+ali.bucketname=vaia-www
 ali.file.url=http://prod-vaia.oss-cn-shanghai.aliyuncs.com/
+
+#ali.endpoint=http://oss-cn-shanghai.aliyuncs.com
+#ali.accesskey.id=LTAIJU0mgvKf8Bwl
+#ali.accesskey.secret=2JF96wyNgKTLzpZErZrmJId64Qfq8w
+#ali.bucketname=test-vaia
+#ali.file.url=http://prod-vaia.oss-cn-shanghai.aliyuncs.com/
