--- a/vaia_crm/pom.xml
+++ b/vaia_crm/pom.xml
@@ -35,11 +35,11 @@
 			<version>1.2.30</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.apache.shiro</groupId>
-			<artifactId>shiro-spring</artifactId>
-			<version>1.4.0</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.apache.shiro</groupId>-->
+			<!--<artifactId>shiro-spring</artifactId>-->
+			<!--<version>1.4.0</version>-->
+		<!--</dependency>-->
 	</dependencies>
 
 	<build>
