跨域导致session不一致

--- a/vaia_crm/src/main/resources/application.properties
+++ b/vaia_crm/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.password=123456
 
 spring.http.multipart.maxFileSize=300Mb
 spring.http.multipart.maxRequestSize=600Mb
+
+server.session.cookie.max-age=18000
+server.session.timeout=18000
